<resources>
    <string name="app_name">Smart Bin</string>
    <string name="next">NEXT</string>
    <string name="ssidHint">SSID</string>
    <string name="passwordHint">Password</string>
    <string name="enableButtonText">ENABLE</string>
    <string name="binSizeHint">Select bin size…</string>
    <string name="set_timeHint">Set time…</string>
    <string name="reminderOptionHint">Select reminder option…</string>
    <string name="numberOfCollectionString">Number of collections:</string>
    <string name="estimated_expensesString">Estimated expenses:</string>
    <string name="expensesString">Expenses:</string>
    <string name="current_number_of_collectionsString">Current number of collections:</string>
    <string name="unit_m_cube">&#160;m&#179;</string>
    <string name="unit_HRK">&#160;kn</string>
    <string name="WarningYellow">Your bin is getting full. Consider some recycling and sorting.</string>
    <string name="WarningRed">Your bin is full!</string>


    <string-array
        name="binSizes">
        <item>120 L</item>
        <item>80 L</item>
        <item>60 L</item>
    </string-array>

    <string-array
        name="reminderOptions">
        <item>1 day before</item>
        <item>1 hour before</item>
        <item>30 minutes before</item>
        <item>15 minutes before</item>
        <item>2 minutes before</item>
    </string-array>
</resources>
